--- a/client/index.html
+++ b/client/index.html
@@ -1,32 +1,48 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <!-- Page title shown on browser tab -->
   <title>Collaborative Canvas</title>
+
+  <!-- Main stylesheet for UI styling -->
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
+  <!-- Toolbar containing all drawing controls -->
   <div id="toolbar">
+    
+    <!-- Color picker for brush/text -->
     <input type="color" id="colorPicker" value="#000000">
+
+    <!-- Slider to control brush/eraser thickness -->
     <input type="range" id="brushSize" min="1" max="20" value="4">
 
+    <!-- Tool selection buttons -->
     <button id="brush">Brush</button>
     <button id="eraser">Eraser</button>
     <button id="rect">Rectangle</button>
     <button id="text">Text</button>
 
+    <!-- Global undo/redo (syncs across users) -->
     <button id="undo">Undo</button>
     <button id="redo">Redo</button>
 
+    <!-- Local save/load using browser storage -->
     <button id="save">Save</button>
     <button id="load">Load</button>
 
+    <!-- Shows list of users currently in the room -->
     <div id="users"></div>
   </div>
 
+  <!-- Main drawing area -->
   <canvas id="canvas"></canvas>
 
+  <!-- Socket.IO client library (served from backend) -->
   <script src="/socket.io/socket.io.js"></script>
+
+  <!-- Main frontend logic (uses ES modules) -->
   <script type="module" src="main.js"></script>
 </body>
 </html>
